[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
serde = { version = "1.0.147", features = ["derive"] }
rss = { version = "2.0.1", features = ["serde", "url"] }

serde_json = "1.0"
regex = "1.6.0"



