[package]
name = "jupiter_common"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Common utilities for podcast2text"
repository = "https://github.com/flakm/jupiter-search"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
serde = { version = "1.0.147", features = ["derive"] }
rss = { version = "2.0.1", features = ["serde", "url"] }

serde_json = "1.0"
regex = "1.6.0"
chrono = { version = "0.4.23", features = ["serde"] }



