[package]
name = "jupiter_downloader"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
reqwest = "0.11.12"

tokio = { version = "1.21.2", features = ["full"] }
rss = { version = "2.0.1", features = ["serde", "url"] }
serde_json = "1.0"
serde = { version = "1.0.147", features = ["derive"] }


uuid = { version = "1.2.1", features = ["v4"] }
stt = { path = "../stt" }
lofty = "0.9.0"
base64 = "0.13.1"
futures = "0.3.25"


jupiter_common = { path = "../jupiter_common",  version = "0.0.1" }
