[package]
name = "podcast2text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
tokio = { version = "1.21.2", features = ["full"] }

rss = { version = "2.0.1", features = ["serde", "url"] }
serde_json = "1.0"
serde = { version = "1.0.147", features = ["derive"] }


common = { path = "../common" }
downloader = { path = "../downloader" }
clap = { version = "4.0.26", features = ["derive", "env"] }
