[package]
name = "podcast2text"
version = "0.0.2"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Cli tool for downloading episodes from rss and running transcription"
repository = "https://github.com/flakm/jupiter-search"

readme = "../README.md"

[dependencies]
anyhow = "1.0.66"
tokio = { version = "1.21.2", features = ["full"] }

rss = { version = "2.0.1", features = ["serde", "url"] }
serde_json = "1.0"
serde = { version = "1.0.147", features = ["derive"] }


clap = { version = "4.0.26", features = ["derive", "env"] }


jupiter_downloader = { path = "../jupiter_downloader" ,  version = "0.0.1" }
jupiter_common = { path = "../jupiter_common",  version = "0.0.1" }
