[package]
name = "search-load"
version = "0.1.0"
edition = "2021"


[dependencies]


anyhow = { version = "1.0", features = ["std"] }
serde = { version = "1.0.147", features = ["derive"] }
rss = { version = "2.0.1", features = ["serde", "url"] }

meilisearch-sdk = "0.20"
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
regex = "1.6.0"

