[package]
name = "search-load"
version = "0.0.1"
edition = "2021"


[dependencies]


anyhow = { version = "1.0", features = ["std"] }
serde = { version = "1.0.147", features = ["derive"] }

meilisearch-sdk = "0.20"
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["full"] }

jupiter_common = { path = "../jupiter_common",  version = "0.0.1" }
