[package]
name = "stt"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["std"] }

whisper-rs = "0.2.0"

symphonia = { version = "0.5.1", features = ["mp3"] }
rubato = "0.12.0"


audrey = "0.3"
uuid = { version = "1.2.1", features = ["v4"] }
hound = "3.5.0"
byteorder = "1.4.3"

serde = { version = "1.0.147", features = ["derive"] }

[build-dependencies]
cc = "1.0"
