[package]
name = "stt"
version = "0.0.1"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Library for transcription using whisper ai model"
repository = "https://github.com/flakm/jupiter-search"

[dependencies]
anyhow = { version = "1.0", features = ["std"] }

whisper-rs = { git = "https://github.com/tazz4843/whisper-rs.git" }
#whisper-rs = { path = "../../whisper-rs" }

symphonia = { version = "0.5.1", features = ["mp3"] }
rubato = "0.12.0"


audrey = "0.3"
uuid = { version = "1.2.1", features = ["v4"] }
hound = "3.5.0"
byteorder = "1.4.3"

serde = { version = "1.0.147", features = ["derive"] }

log = "0.4.17"
sha256 = "1.1.1"

